push code addcolumn v5

--- a/src/assets/styles/addColumnBoard.css
+++ b/src/assets/styles/addColumnBoard.css
@@ -320,4 +320,5 @@ h2 {
     display: flex;
     justify-content: center;
     margin: 0 12px;
+    min-width: auto; /* hoặc giảm giá trị min-width */
 }
