--- a/src/assets/styles/signup.css
+++ b/src/assets/styles/signup.css
@@ -216,6 +216,7 @@ form .btn-continue:hover {
 
 /* Question  */
 .question {
+    position: relative;
     display: flex;
     justify-content: space-between;
 }
@@ -239,9 +240,6 @@ form .btn-continue:hover {
     display: flex;
     align-items: center;
     gap: 10px;
-}
-
-.wrapInput {
     border-radius: 30px;
     border: 1px solid #c3c6d4;
     padding: 10px 15px;
@@ -258,7 +256,7 @@ input[type="radio"] {
 
 input[type="radio"] + label {
     position: relative;
-    padding-left: 25px;
+    padding-left: 35px;
     cursor: pointer;
 }
 
@@ -266,12 +264,11 @@ input[type="radio"] + label:before {
     content: "";
     position: absolute;
     left: 0;
-    top: 1px;
-    width: 18px;
-    height: 18px;
+    top: -1px;
+    width: 25px;
+    height: 25px;
     border: 1px solid #c3c6d4;
     border-radius: 50%;
-    margin-top: 1px;
 }
 
 input[type="radio"]:checked + label:before {
@@ -281,10 +278,10 @@ input[type="radio"]:checked + label:before {
 input[type="radio"]:checked + label:after {
     content: "";
     position: absolute;
-    top: 6px;
-    left: 4px;
-    width: 10px;
-    height: 10px;
+    top: 4px;
+    left: 6px;
+    width: 14px;
+    height: 14px;
     border-radius: 50%;
     background-color: #fff;
 }
@@ -380,4 +377,38 @@ input[type="checkbox"]::before {
 
 input[type="checkbox"]:checked::before {
     opacity: 1;
+}
+
+.custom-btn-continue {
+    position: absolute;
+    margin-top: 50px;
+    display: inline-flex !important;
+    align-items: center;
+    justify-content: center;
+    background-color: #0073ea;
+    color: #fff;
+    font-size: 20px;
+    padding: 20px;
+    gap: 10px;
+    bottom: 150px;
+    left: 50%;
+}
+
+.custom-btn {
+    display: inline-flex !important;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    padding: 20px;
+    gap: 10px;
+    border-color: #c3c6d4;
+    border: 1px solid #c3c6d4;
+}
+.hover-btn-continue,
+.hover-btn-back {
+    transition: 0.5s all;
+}
+.hover-btn-back:hover {
+    background-color: #dcdfec;
+    border-color: #c3c6d4;
 }
